--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -146,6 +146,9 @@ video{
 .start-0{
     left: 0;
 }
+.end-0{
+    right: 0;
+}
 .bottom-0{
     bottom: 0;
 }
@@ -348,7 +351,7 @@ video{
 .site-nav li a{
     font-size: 12px;
     font-weight: 400;
-    letter-spacing: 2px;    
+    letter-spacing: 2px;   
 }
 .site-nav li a:after{
     width: 0%;
@@ -379,20 +382,52 @@ video{
     position: absolute;
     top: 0;
     left: 0;
-    opacity: 0;
-    visibility: hidden;
     transition: all ease 0.2s;
     z-index: -1;
-}
-.header-overlay:before{
-    opacity: 1;
-    visibility: visible;
 }
 .header-overlay{
     padding-top: 30px;
     padding-bottom: 30px;
 }
-
+.site-logo{
+    transform: translateX(4px);
+}
+.left-nav ul{
+    column-gap: 30px;
+}
+.left-nav li{
+    padding-right: 30px;
+    position: relative;
+}
+.left-nav li:after{
+    width: 1px;
+    height: calc(100% - 10px);
+    background: #fff;
+    display: block;
+    content: "";
+    display: block;
+    position: absolute;
+    top: 5px;
+    right: 0;
+}
+.left-nav li:last-child{
+    padding-right: 0;
+}
+.left-nav li:last-child:after{
+    display: none;
+}
+.left-nav li a{
+    padding: 10px 0;
+    display: block;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: transparent;    
+    font-size: 12px;
+    letter-spacing: 2px;
+}
+.left-nav li a:hover{
+    border-bottom-color: #fff;
+}
 
 /*---- Blocks ----*/
 .image-block img{
@@ -883,10 +918,7 @@ img[data-aos^=fade][data-aos^=fade]{
     .section:not(.video-banner-section){
         overflow-x: hidden;
         overflow-y: hidden;
-    }
-    .site-logo img{
-        filter: invert(100%);
-    }
+    }        
     .site-nav{
         width: 100%;
         height: 100%;
@@ -898,6 +930,9 @@ img[data-aos^=fade][data-aos^=fade]{
         transform: translateX(-100%);
         transition: all ease 0.2s;
         z-index: 99;
+    }
+    .site-nav ul{
+        column-gap: 30px;
     }
     .site-nav.open-menu{
         transform: translateX(0%);
@@ -919,6 +954,19 @@ img[data-aos^=fade][data-aos^=fade]{
     }
     .site-nav li a:after{        
         background: var(--color-dark);       
+    }
+    .site-header .left-nav{
+        display: none;
+    }
+    .site-header .left-nav-mobile{
+        border-top: 1px solid rgb(0,0,0,0.1);        
+        margin: 30px 0 0;
+        padding: 30px 0 0;
+        display: flex;
+        flex-direction: row;
+    }    
+    .site-header .left-nav-mobile li:after{
+        background:rgb(0,0,0,0.2);
     }
     .hero-section .summary-block{
         width: 100%;
@@ -981,7 +1029,6 @@ img[data-aos^=fade][data-aos^=fade]{
 
 }
 
-
 @media(max-width: 767px){
 
     :root{
@@ -1005,6 +1052,10 @@ img[data-aos^=fade][data-aos^=fade]{
     .sm-w-100{
         width: 100%;
     }
+    .sm-py-30{
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
     .sm-pt-60{
         padding-top: 60px;
     }
@@ -1015,6 +1066,13 @@ img[data-aos^=fade][data-aos^=fade]{
         padding-top: 15px;
         padding-bottom: 15px;
     }
+    .site-header .header-wrapper{
+        justify-content: flex-start;
+    }
+    .site-header .left-nav{
+        left: unset;
+        right: 45px;
+    }       
     .site-logo img{
         max-width: 140px;
     }
@@ -1164,8 +1222,20 @@ img[data-aos^=fade][data-aos^=fade]{
         padding-left: 20px;
         padding-right: 20px;
     }   
+    .site-nav{
+        padding: 60px 20px;
+    }
+    .site-header .left-nav-mobile{
+        column-gap: 25px;
+    }
+    .site-header .left-nav-mobile li{
+        padding-right: 25px;        
+    }
+    .site-header .left-nav-mobile li:last-child{
+        padding-right: 0;
+    }
     .contact-section .contact-block {
         padding: 60px 20px 20px;
-    } 
+    }    
 
 }
