--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -366,6 +366,7 @@ video{
     opacity: 0;
     transition: all ease 0.2s;
 }
+.site-nav li a:hover:after,
 .site-nav li a.active:after{
     width: 100%;
     visibility: visible;
@@ -418,16 +419,31 @@ video{
 }
 .left-nav li a{
     padding: 10px 0;
-    display: block;
-    border-bottom-width: 1px;
-    border-bottom-style: solid;
-    border-bottom-color: transparent;    
+    display: block;    
     font-size: 12px;
     letter-spacing: 2px;
+    position: relative;
 }
-.left-nav li a:hover{
-    border-bottom-color: #fff;
+.left-nav a:after{
+    width: 0%;
+    height: 1px;
+    background: var(--color-light);
+    display: block;
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    visibility: hidden;
+    opacity: 0;
+    transition: all ease 0.2s;
 }
+.left-nav li a:hover:after,
+.left-nav li a.active:after{
+    width: 100%;
+    visibility: visible;
+    opacity: 1;
+}
+
 
 /*---- Blocks ----*/
 .image-block img{
@@ -953,8 +969,12 @@ img[data-aos^=fade][data-aos^=fade]{
         color: #000;
     }
     .site-nav li a:after{        
-        background: var(--color-dark);       
+        background: var(--color-dark);     
     }
+    .site-nav li a:hover:after, 
+    .site-nav li a.active:after{
+        opacity: 0.4;
+    }    
     .site-header .left-nav{
         display: none;
     }
