--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -329,7 +329,7 @@ video{
     content: "";
 }
 .bottom-overlay:after{
-    background-image: linear-gradient(transparent 0%, rgb(0,0,0,1) 100%);
+    background-image: linear-gradient(transparent 0%, rgb(0,0,0,1) 100%) !important;
     bottom: 0;
     content: "";  
 }
